# sw_frontend_rs

./: .gitignore  ad57.code-workspace  ad57_rtic.code-workspace  all.code-workspace  can_dispatch.code-workspace  changelog.md  frontend_v2.code-workspace  larus.code-workspace  larus_frontend_v1.code-workspace  larus_frontend_v2.code-workspace  make_all.sh  make_all_images.sh  pc.code-workspace  readme.md  sw_update.code-workspace  ws_air_avionics.code-workspace
core/: .gitignore  Cargo.toml
core/assets/: compass227.lif  glider227.lif  m_s.lif  spiral227.lif  straight227.lif  vario_wallpaper227.lif
core/assets/size_227x285/: bat_empty.lif  bat_full.lif  bat_half.lif  glider.lif  km_h.lif  m_s.lif  north.lif  sat.lif  spiral.lif  straight.lif  vario_wallpaper.lif  wp_horizon.lif  wp_vario.lif
core/assets/size_240x320/: bat_empty.lif  bat_full.lif  bat_half.lif  glider.lif  km_h.lif  m_s.lif  north.lif  sat.lif  spiral.lif  straight.lif  vario_wallpaper.lif  wp_horizon.lif  wp_vario.lif
core/assets/size_480x480/: bat_empty.lif  bat_full.lif  bat_half.lif  glider.lif  km_h.lif  m_s.lif  north.lif  sat.lif  spiral.lif  straight.lif  wp_horizon.lif  wp_vario.lif
core/doc/: fit.ipynb
core/src/: blackboard.rs  controller.rs  core_model.rs  flight_physics.rs  lib.rs  macros.rs  model.rs  system_of_units.rs  utils.rs  view.rs
core/src/common/: can_dispatcher.rs  lock.rs  mod.rs
core/src/controller/: can_rdr.rs  can_wtr.rs  demo.rs  edit.rs  editor.rs  horizon.rs  menu.rs  menu_control.rs  mod.rs  nmea_rdr.rs  nmea_wtr.rs  persist.rs  persistence.rs  sound.rs  sw_update.rs  sw_upted.rs  tick_1s.rs  vario.rs
core/src/flight_physics/: airspeed.rs  athmodphere.rs  glider.rs  mod.rs  polar.rs  polar_store.rs  polar_store_idx.rs  wind.rs  wind_vector.rs
core/src/model/: calculated.rs  can_rdr.rs  can_wtr.rs  config.rs  control.rs  device.rs  device_const.rs  editable.rs  menu.rs  mod.rs  nmea.rs  nmea_rdr.rs  nmea_wtr.rs  persistence.rs  sensor.rs
core/src/system_of_units/: acceleration.rs  angular_velocity.rs  area.rs  coord.rs  density.rs  length.rs  mass.rs  mod.rs  pressure.rs  speed.rs
core/src/utils/: can_frame.rs  can_ids.rs  can_paket.rs  can_rdr.rs  can_wtr.rs  colors.rs  colors16.rs  colors8.rs  concat.rs  config_ids.rs  config_item.rs  date_time.rs  draw_image.rs  error.rs  events.rs  filter.rs  idle_events.rs  key_event.rs  metadata.rs  mod.rs  parse.rs  persistence.rs  rgb565_colors.rs  themes.rs  tstring.rs  variant.rs  version.rs  version_check.rs
core/src/view/: colors.html  colors.py  colors.rs  demo.rs  dialog_box.rs  edit.rs  editor.rs  elements.rs  fw_update.rs  horizon.rs  info.rs  menu.rs  menu_view.rs  mod.rs  rgb565_colors.rs  sw_update.rs  thermal_data.rs  vario.rs  viewable.rs
core/tests/: as33.csv  can.rs  filter.rs  ls3_wl.csv  simple.rs  vda_blocked.rs  wait.rs
core/tests/can/: same_object_id.rs
device/ad57_rtic/: Cargo.toml  changelog.md  chips.txt  make_image.sh  memory.x  pack.toml  readme.md
device/ad57_rtic/.cargo/: config.toml
device/ad57_rtic/assets/: adj_version.py
device/ad57_rtic/examples/: blinky.rs  eeprom.rs  files.rs  lcd.rs  lcd_dma.rs  panic.rs  rtic.rs  serial-dma.rs  serial.rs  st7789.rs  sw_update.rs  timer.rs
device/ad57_rtic/scripts/: adj_version.py  pack.py  template_pack.toml  template_version.rs
device/ad57_rtic/src/: dev_controller.rs  dev_view.rs  driver.rs  fmt.rs  idle_loop.rs  main.rs  utils.rs
device/air_avionics_ad57/: Cargo.toml  pack.toml  readme.md
device/air_avionics_ad57/.cargo/: config.toml
device/air_avionics_ad57/assets/: attention.lif  bat_empty.lif  bat_full.lif  gear.lif  north.lif  sat.lif  small_glider.lif  spiral.lif  wp_editor.lif  wp_horizon.lif  wp_vario.lif
device/air_avionics_ad57/examples/: eeprom.rs  files.rs
device/air_avionics_ad57/scripts/: adj_version.py  pack.py  template_pack.toml
device/air_avionics_ad57/src/: dev_const.rs  dev_controller.rs  idle_loop.rs  main.rs
device/common/can_dispatch/: Cargo.toml
device/common/fmc_lcd/: Cargo.toml
device/common/storage_items/: Cargo.toml
device/larus/: Cargo.toml  make_image.sh  pack.toml  readme.md
device/larus/assets/: sound.py
device/larus/examples/: analog.rs  blinky.rs  can.rs  clocks.rs  files.rs  keys.rs  lcd.rs  panic.rs  pers.rs  rtic.rs  sdmmc_fat.rs  serial.rs  serial_dma.rs  sound.rs  timer.rs
device/larus/scripts/: adj_version.py  pack.py  sound.py  template_pack.toml  template_version.rs
device/larus/src/: dev_controller.rs  dev_view.rs  idle_loop.rs  main.rs
device/larus_frontend_v2/: Cargo.toml  pack.toml  readme.md
device/larus_frontend_v2/.cargo/: config.toml
device/larus_frontend_v2/assets/: attention.lif  m_s.lif  north.lif  small_glider.lif  straight.lif  wp_editor.lif  wp_vario.lif
device/larus_frontend_v2/doc/: portmapping-v1-v2.ods
device/larus_frontend_v2/examples/: blinky.rs  embedded_graphics.rs  files.rs  io_kbd.rs  lcd.rs  timer.rs
device/larus_frontend_v2/scripts/: adj_version.py  pack.py  sound.py  template_pack.toml  template_version.rs
device/larus_frontend_v2/src/: dev_const.rs  dev_controller.rs  dev_view.rs  idle_loop.rs  main.rs
device/pc/: Cargo.toml  copy_assets_air_avionics.sh  copy_assets_v1.sh  copy_assets_v2.sh  readme.md
device/pc/assets/: gear.lif  glider.lif  sat.lif
device/pc/larus_emulator/: emulator_ui.py  emulator_ui.ui  flight_data.py  flight_player.py  flight_player_cli.py  listen_udp.py  nmea.py  utils.py
device/pc/larus_flight_player/: flight_data.py  player.py
device/pc/simulator-0.5.0/: Cargo.toml
device/pc/src/: dev_const.rs  device_const.rs  display.rs  eeprom.rs  main.rs  tcp.rs
device/sim/: Cargo.toml  README.md  make_image.sh
device/sim/assets/: bat_half.lif  small_glider.lif  wp_horizon.lif  wp_vario.lif
device/sim/scripts/: adj_version.py
device/sim/src/: adapt.rs  config.rs  dev_const.rs  error.rs  frontend.rs  gui_events.rs  main.rs
device/sim/ui/: app-window.slint  frontend.slint  global.slint  hardware.slint  log-window.slint
device/stm32f412-disco/: Cargo.toml
device/stm32f412-disco/src/: main.rs
(+281 files in other folders)
