[package]
name = "corelib"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
embedded-graphics = "0.8.0"
u8g2-fonts = "0.3.0"
micromath = { version = "2.0", default-features = false }
num = { version = "0.4.0", default-features = false }
heapless = "0.8"
byteorder = { version = "1.4", default-features = false }
embedded-hal = "0.2.7"
defmt = "0.3"

# local

[features]
default = ["air_avionics_ad57", "eeprom_size_8192"]
air_avionics_ad57 = []
larus_ad57 = []
eeprom_size_8192 = []
