[package]
name = "corelib"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
embedded-graphics = "0.8.0"
u8g2-fonts = "0.3.0"
micromath = { version = "2.0", default-features = false }
num = { version = "0.4.0", default-features = false }
num_enum = { version = "0.7.3", default-features = false }
heapless = "0.8"
tfmt = "0.4"
byteorder = { version = "1.4", default-features = false }
embedded-hal = "0.2.7"
defmt = "0.3"

[target.'cfg(unix)'.dependencies]
libc-print = "0.1.12"

# local

[features]
default = ["colors_8_indexed", "eeprom_size_8192"]
colors_8_indexed = []
colors_rgb565 = []
eeprom_size_8192 = []