[package]
authors = ["Simsys <winfried.simon@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "vario"
version = "0.1.3"

[dependencies]

# cortex m
cortex-m = { version = "0.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7"
cortex-m-rtic = "1.1.4"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rtic-monotonic = "1.0.0"
systick-monotonic = "1.0.1"

# hardware specific
bxcan = "0.7"
eeprom24x = "0.6.0"
stm32f4xx-hal = { version = "0.17", features = ["rt", "stm32f407", "fsmc_lcd", "can", "can1", "rtic", "sdio", "sdio-host"] }

# other libraries
display-interface = "0.4"
embedded-graphics = "0.8"
embedded-hal = "0.2"
embedded-storage = "0.2.0"
fatfs = { version = "0.4.0", default-features = false, path = "../common/rust-fatfs" }
fugit = "0.3"
heapless = "0.8"
micromath = { version = "2.0", default-features = false }
nb = "1"
static_cell = "1.2.0"

# local
corelib = { path = "../../core", features = ["air_avionics_ad57"] }
fmc_lcd = { path="../common/fmc_lcd", features = ["stm32f407"] }

[features]
defmt-default = []

[[bin]]
name = "vario"
test = false
bench = false

[profile.dev]
opt-level = 1
codegen-units = 16
debug = true
lto = false

[profile.release]
opt-level = "s"     # optimize for size
codegen-units = 1   # better optimizations
debug = true        # symbols are nice and they don't increase the size on Flash
lto = true          # better optimizations
