[package]
authors = ["Simsys <winfried.simon@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "vario"
version = "0.1.4"

[dependencies]

# cortex m
cortex-m = { version = "0.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7"
cortex-m-rtic = "1.1.4"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rtic-monotonic = "1.0.0"
systick-monotonic = "1.0.1"

# hardware specific
bxcan = "0.7"
# st7789 = { path = "/media/winni/1p4/Werkstatt/crates/st7789" }
st7789 = "0.7.0"
eeprom24x = "0.6.0"
stm32f4xx-hal = { version = "0.17", features = ["rt", "stm32f407", "fsmc_lcd", "can", "can1", "rtic", "sdio", "sdio-host"] }

# other libraries
display-interface = "0.4"
embedded-graphics = "0.8"
embedded-hal = "0.2"
embedded-storage = "0.2.0"
embedded-sdmmc = { version = "0.6.0", default-features = false }
fugit = "0.3"
heapless = "0.8"
tfmt = "0.4"
micromath = { version = "2.0", default-features = false }
nb = "1"
rand_core = "0.6"
static_cell = "1.2.0"

# local

[dependencies.corelib]
path = "../../core"
default-features = false
features = ["air_avionics_ad57", "eeprom_size_8192"]


[features]
defmt-default = []
test-panic = []

[[bin]]
name = "vario"
test = false
bench = false

[profile.dev]
opt-level = 1
codegen-units = 16
debug = true
lto = false

[profile.release]
opt-level = "s"     # optimize for size
codegen-units = 1   # better optimizations
debug = true        # symbols are nice and they don't increase the size on Flash
lto = true          # better optimizations
