[package]
name = "vario"
version = "0.0.1"
authors = ["Winfried Simon <winfried.simon@gmail.com>"]
edition = "2021"


[dependencies]

# hardware
cortex-m = { version = "^0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = ">=0.6.15,<0.8"
cortex-m-rtic = "1.1"
fdcan = "0.2"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
st7789 = "0.7.0"
stm32h7xx-hal = { version = "0.15.1", features = ["rt", "stm32h743", "fmc", "can"] }
eeprom24x = "0.6.0"

# general
defmt = "0.3"
defmt-rtt = "0.4"
embedded-hal = { version = "0.2.6", features = ["unproven"] }
heapless = "0.8"
nb = "1"
panic-halt = "0.2.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rtic-monotonic = "1.0.0"
fugit = "0.3.5"

# app specific
embedded-graphics = "0.7.1"
display-interface = "0.4"

# local
corelib = { path = "../../core", features = ["air_avionics_ad57"] }

[[bin]]
name = "vario"
test = false
bench = false

[profile.dev]
opt-level = 1
codegen-units = 16
debug = true
lto = false

[profile.release]
opt-level = "s"   # optimize for size
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
