[package]
name = "vario"
version = "0.3.6"
authors = ["Winfried Simon <winfried.simon@gmail.com>"]
edition = "2021"


[dependencies]

# cortex m
cortex-m = { version = "^0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = ">=0.6.15,<0.8"
cortex-m-rtic = "1.1.4"
defmt = "0.3"
defmt-rtt = "0.4"
rtic-monotonic = "1.0.0"
rtt-target = { version = "0.6.1", features = ["defmt"] }

# hardware specific
eeprom24x = "0.6.0"
fdcan = "0.2"
st7789 = "0.7.0"
stm32h7xx-hal = { version = "0.15.1", features = ["rt", "stm32h743v", "fmc", "can", "sdmmc", "defmt"] }
embedded-dma = "0.2.0"
sdio-host = "0.9"
embedded-sdmmc = { version = "0.7" }

# other libraries
display-interface = "0.4"
embedded-graphics = "0.8.0"
u8g2-fonts = "0.3.0"
embedded-hal = { version = "0.2.6", features = ["unproven"] }
embedded-storage = "0.3"
fugit = "0.3"
heapless = "0.8"
tfmt = "0.4"
nb = "1"

# local

[dependencies.corelib]
path = "../../core"
default-features = false 
features = ["colors_8_indexed", "eeprom_size_8192"]

[features]
test-panic = []
rtic-info = []

[[bin]]
name = "vario"
test = false
bench = false

[profile.dev]
opt-level = 1
codegen-units = 16
debug = true
lto = false

[profile.release]
opt-level = "s"   # optimize for size
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
