[package]
name = "eg-examples"
version = "0.1.0"
edition = "2018"
publish = false
license = "GPL3"

[dependencies]
embedded-graphics = "0.8.0"
embedded-graphics-simulator = { path = "simulator-0.5.0" }
micromath = { version = "1.1.0", default-features = false }
byteorder = { version = "1.4", default-features = false }

heapless = "0.8"
bxcan = "0.7"

[dependencies.corelib]
path = "../../core"
features = ["display_size_227x285"]
