[package]
name = "frontend-simu"
version = "0.1.0"
edition = "2018"
publish = false
license = "GPL3"

[dependencies]

# host
byteorder = { version = "1.4", default-features = false }

# other libraries
embedded-graphics = "0.8.0"
embedded-graphics-simulator = { path = "simulator-0.5.0" }
u8g2-fonts = "0.3.0"
heapless = "0.8"
micromath = { version = "1.1.0", default-features = false }

# hardware specific
eeprom24x = "0.6.0"
embedded-hal = "0.2"

#local

# local
[dependencies.corelib]
path = "../../core"
default-features = false
features = ["colors_rgb565", "eeprom_size_8192"]

[features]
default = ["larus_frontend_v1", "eeprom_size_8192"]
air_avionics_ad57 = []
larus_frontend_v1 = []
larus_frontend_v2 = []
eeprom_size_8192 = []
