[package]
authors = ["Simsys <winfried.simon@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "vario"
version = "0.1.0"

[dependencies]
embedded-hal = "0.2"
display-interface = "0.4"

nb = "1"
cortex-m = { version = "0.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.6"
panic-halt = "0.2"
stm32f4xx-hal = { version = "0.10", features = ["rt", "stm32f412", "fsmc_lcd"] }

embedded-graphics = "0.7.1"
micromath = { version = "1.1.0", default-features = false }

panic-probe = { version = "0.3", features = ["print-defmt"] }
defmt = "0.3"
defmt-rtt = "0.4"


[dependencies.vario_display]
path = "../../core"
features = ["defmt", "display_size_240x240"]

[[bin]]
name = "vario"
test = false
bench = false

[profile.dev]
opt-level = 1
codegen-units = 16
debug = true
lto = false

[profile.release]
opt-level = "s"     # optimize for size
codegen-units = 1   # better optimizations
debug = true        # symbols are nice and they don't increase the size on Flash
lto = true          # better optimizations
