[package]
name = "fmc_lcd"
categories = ["embedded", "no-std"]
description = "FMC Driver for stm32f407 and stm32h743"
keywords = ["arm", "cortex-m"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
stm32f4xx-hal = { version = "0.17", features = ["rt", "stm32f407", "fsmc"], optional = true }
stm32h7xx-hal = { version = "0.15.1", features = ["rt", "stm32h743", "fmc"], optional = true }
display-interface = "0.4"

[features]
stm32f407 = ["dep:stm32f4xx-hal"]
stm32h743 = ["dep:stm32h7xx-hal"]
