[package]
name = "storage_items"
categories = ["embedded", "no-std"]
description = "Driver for Settings Storage in EEPROM"
keywords = ["arm", "cortex-m"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
corelib = { path = "../../../core", features = ["eeprom_size_8192"] }
eeprom24x = "0.6.0"
embedded-hal = "0.2"

